--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-native-screens": "~4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "husky": "^9.1.6"
   },
   "private": true
 }
